--- a/demo_withProperties.html
+++ b/demo_withProperties.html
@@ -141,7 +141,7 @@
 		<!-- start body for phone-->
 		<div class="bodyforphone" id="bodyforphone">
 			<!-- welcome slider -->
-			<div id="myCarouselwelcomephone" class="carouselbody carousel slide" data-ride="carousel">
+			<div id="myCarouselwelcomephone" class="carouselbody carousel slide" data-ride="carousel" data-interval="10000">
 				<!-- Indicators -->
 				<ol class="carousel-indicators">
 					<li data-target="#myCarouselwelcomephone" data-slide-to="0" class="active"></li>
@@ -222,57 +222,50 @@
 			</div>
 			<div class="body2phone">
 				<div class="bodyphone2main row">
-					<div class="col-xs-8"><a style="float: left;" href="#"><b >CUSTOMER CARE</b></a></div>
-					<div class="dropdown col-xs-2" style="float: right; border:none">
-						<button style="background-color: white;margin: 0px;
-						padding: 0px;" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					<div class="col-xs-9"><a style="float: left;" href="#"><b >CUSTOMER CARE</b></a></div>
+					<div class=" col-xs-1" style="float: right; border:none">
+						<button id="contactdropdown" style="background-color: white;margin: 0px;
+						padding: 0px;" class="btn btn-secondary dropdown-toggle" type="button">
 						<span class="caret"></span>
 					</button>
-					<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-						<a class="dropdown-item" href="#"><b>Sales Hotline : </b> +6597772176</a>
-						<a class="dropdown-item" href="#"></a>
-						<a class="dropdown-item" href="#">Something else here</a>
-					</div>
+					
 				</div>
+				<div id="info" class="row"></div>
 			</div>
 			<div class="bodyphone2main row">
-				<div class="col-xs-8"><a style="float: left;" href="#"><b >FAQs</b></a></div>
-				<div class="dropdown col-xs-2" style="float: right; border:none">
+				<div class="col-xs-9"><a style="float: left;" href="#"><b >FAQs</b></a></div>
+				<div class=" col-xs-1" style="float: right; border:none">
 					<button style="background-color: white;margin: 0px;
 					padding: 0px;" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					<span class="caret"></span>
 				</button>
-				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton"></div>
 			</div>
 		</div>
 		<div class="bodyphone2main row">
-			<div class="col-xs-8"><a style="float: left;" href="#"><b >DELIVERY INFO</b></a></div>
-			<div class="dropdown col-xs-2" style="float: right; border:none">
+			<div class="col-xs-9"><a style="float: left;" href="#"><b >DELIVERY INFO</b></a></div>
+			<div class=" col-xs-1" style="float: right; border:none">
 				<button style="background-color: white;margin: 0px;
 				padding: 0px;" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 				<span class="caret"></span>
 			</button>
-			<div class="dropdown-menu" aria-labelledby="dropdownMenuButton"></div>
 		</div>
 	</div>
 	<div class="bodyphone2main row">
-		<div class="col-xs-8"><a style="float: left;" href="#"><b >GUIDE PAGE</b></a></div>
-		<div class="dropdown col-xs-2" style="float: right; border:none">
+		<div class="col-xs-9"><a style="float: left;" href="#"><b >GUIDE PAGE</b></a></div>
+		<div class=" col-xs-1" style="float: right; border:none">
 			<button style="background-color: white;margin: 0px;
 			padding: 0px;" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			<span class="caret"></span>
 		</button>
-		<div class="dropdown-menu" aria-labelledby="dropdownMenuButton"></div>
 	</div>
 </div>
 <div class="bodyphone2main row">
-	<div class="col-xs-8"><a style="float: left;" href="#"><b >PAYMENT OPTIONS</b></a></div>
-	<div class="dropdown col-xs-2" style="float: right; border:none">
+	<div class="col-xs-9"><a style="float: left;" href="#"><b >PAYMENT OPTION</b></a></div>
+	<div class=" col-xs-1" style="float: right; border:none">
 		<button style="background-color: white;margin: 0px;
 		padding: 0px;" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 		<span class="caret"></span>
 	</button>
-	<div class="dropdown-menu" aria-labelledby="dropdownMenuButton"></div>
 </div>
 </div>
 </div>
@@ -304,7 +297,7 @@
 
 <div class="body" id="bodyforcomputer">
 
-	<div id="myCarouselwelcome" class="carousel slide" data-ride="carousel">
+	<div id="myCarouselwelcome" class="carousel slide" data-ride="carousel" data-interval="10000">
 		<!-- Indicators -->
 		<ol class="carousel-indicators">
 			<li data-target="#myCarouselwelcome" data-slide-to="0" class="active"></li>
