--- a/demo_withProperties.html
+++ b/demo_withProperties.html
@@ -221,18 +221,18 @@
 				
 			</div>
 			<div class="body2phone">
-				<div class="bodyphone2main row">
+				<div class="bodyphone2main row" id="contact">
 					<div class="col-xs-9"><a style="float: left;" href="#"><b >CUSTOMER CARE</b></a></div>
 					<div class=" col-xs-1" style="float: right; border:none">
-						<button id="contactdropdown" style="background-color: white;margin: 0px;
+						<button  style="background-color: white;margin: 0px;
 						padding: 0px;" class="btn btn-secondary dropdown-toggle" type="button">
 						<span class="caret"></span>
 					</button>
 					
 				</div>
-				<div id="info" class="row"></div>
+				<div id="displaycontact" class="row"></div>
 			</div>
-			<div class="bodyphone2main row">
+			<div class="bodyphone2main row" id="FAQs">
 				<div class="col-xs-9"><a style="float: left;" href="#"><b >FAQs</b></a></div>
 				<div class=" col-xs-1" style="float: right; border:none">
 					<button style="background-color: white;margin: 0px;
@@ -240,8 +240,9 @@
 					<span class="caret"></span>
 				</button>
 			</div>
+			<div id="displayFAQs" class="row"></div>
 		</div>
-		<div class="bodyphone2main row">
+		<div class="bodyphone2main row" id="delivery">
 			<div class="col-xs-9"><a style="float: left;" href="#"><b >DELIVERY INFO</b></a></div>
 			<div class=" col-xs-1" style="float: right; border:none">
 				<button style="background-color: white;margin: 0px;
@@ -249,8 +250,9 @@
 				<span class="caret"></span>
 			</button>
 		</div>
+		<div id="displaydelivery"></div>
 	</div>
-	<div class="bodyphone2main row">
+	<div class="bodyphone2main row" id="guidepage">
 		<div class="col-xs-9"><a style="float: left;" href="#"><b >GUIDE PAGE</b></a></div>
 		<div class=" col-xs-1" style="float: right; border:none">
 			<button style="background-color: white;margin: 0px;
@@ -258,8 +260,9 @@
 			<span class="caret"></span>
 		</button>
 	</div>
+	<div id="displayguidepage"></div>
 </div>
-<div class="bodyphone2main row">
+<div class="bodyphone2main row" id="paymentoption">
 	<div class="col-xs-9"><a style="float: left;" href="#"><b >PAYMENT OPTION</b></a></div>
 	<div class=" col-xs-1" style="float: right; border:none">
 		<button style="background-color: white;margin: 0px;
@@ -267,6 +270,7 @@
 		<span class="caret"></span>
 	</button>
 </div>
+<div id="displaypayment"></div>
 </div>
 </div>
 </div>
